Update to Junit5